{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 24,
  "lineage": "fdfafece-d327-c529-2f81-0ca2b701915d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:vpc/vpc-04b3f2ec9f2ed1d58",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00d67a4c89df81d3a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c64b63a0c4bb7603",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b3f2ec9f2ed1d58",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e21f8fbf7cac22ba",
            "owner_id": "065035877672"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "compliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group/sg-067e866f7f50ea952",
            "description": "Compliant security group",
            "egress": [],
            "id": "sg-067e866f7f50ea952",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f9b1d4209596a08"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "compliant-sg",
            "name_prefix": "",
            "owner_id": "065035877672",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "non_compliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group/sg-03e7d5cbe115c0391",
            "description": "Non-compliant security group",
            "egress": [],
            "id": "sg-03e7d5cbe115c0391",
            "ingress": [],
            "name": "non-compliant-sg",
            "name_prefix": "",
            "owner_id": "065035877672",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group/sg-05f9b1d4209596a08",
            "description": "Source SG from where connections are allowed into the DB",
            "egress": [],
            "id": "sg-05f9b1d4209596a08",
            "ingress": [],
            "name": "source-sg",
            "name_prefix": "",
            "owner_id": "065035877672",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "not_allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-06490d50da911bd3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.31.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06490d50da911bd3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_default_vpc"
            },
            "tags_all": {
              "Name": "subnet_default_vpc"
            },
            "vpc_id": "vpc-04b3f2ec9f2ed1d58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-0e13f71b0bf0bda5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e13f71b0bf0bda5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private1"
            },
            "tags_all": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private1"
            },
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-0caf9592f7636538c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caf9592f7636538c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private2"
            },
            "tags_all": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private2"
            },
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-0ac8b00357bd9a000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac8b00357bd9a000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-custom-vpc-public1"
            },
            "tags_all": {
              "Name": "subnet-custom-vpc-public1"
            },
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:vpc/vpc-01c16cb19a894b74d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004d004ff6e42c089",
            "default_route_table_id": "rtb-0e6306176a905c345",
            "default_security_group_id": "sg-0861e700f4dfbd856",
            "dhcp_options_id": "dopt-0c64b63a0c4bb7603",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c16cb19a894b74d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6306176a905c345",
            "owner_id": "065035877672",
            "tags": {
              "Name": "proj04-custom"
            },
            "tags_all": {
              "Name": "proj04-custom"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group-rule/sgr-016b7eee8b918316b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-016b7eee8b918316b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05f9b1d4209596a08",
            "security_group_id": "sg-067e866f7f50ea952",
            "security_group_rule_id": "sgr-016b7eee8b918316b",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.compliant",
            "aws_security_group.source",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group-rule/sgr-085c6e1648a6c2631",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-085c6e1648a6c2631",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e7d5cbe115c0391",
            "security_group_rule_id": "sgr-085c6e1648a6c2631",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.non_compliant",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_subnet",
      "name": "input",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0caf9592f7636538c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-0caf9592f7636538c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caf9592f7636538c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private2"
            },
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0e13f71b0bf0bda5b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-0e13f71b0bf0bda5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e13f71b0bf0bda5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private1"
            },
            "vpc_id": "vpc-01c16cb19a894b74d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:vpc/vpc-04b3f2ec9f2ed1d58",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00d67a4c89df81d3a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c64b63a0c4bb7603",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b3f2ec9f2ed1d58",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e21f8fbf7cac22ba",
            "owner_id": "065035877672"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}